interpreter/tests/test_files/neg/lea_perm_not_entry.s
	mov r1 pc
	restrict r1 E GLOBAL
	lea r1 15
	halt
